tests/baselines/reference/parserWithStatement1.d.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserWithStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.
tests/cases/conformance/parser/ecmascript5/Statements/parserWithStatement1.d.ts(1,7): error TS2304: Cannot find name 'foo'.
tests/cases/conformance/parser/ecmascript5/Statements/parserWithStatement1.d.ts(1,7): error TS2410: All symbols within a 'with' block will be resolved to 'any'.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserWithStatement1.d.ts (3 errors) ====
    with (foo) {
    ~~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
          ~~~
!!! error TS2304: Cannot find name 'foo'.
          ~~~
!!! error TS2410: All symbols within a 'with' block will be resolved to 'any'.
    }